# egui_dpanel

./: Cargo.toml  README.md
examples/: simple_dpanel.rs
src/: lib.rs
